compiler/testData/cli/jvm/compatqualEnable.out
compiler/testData/cli/jvm/compatqualUsage.kt:2:11: error: null cannot be a value of a non-null type '@EnhancedNullability kotlin/String'.
    b.foo(null)
          ^
COMPILATION_ERROR
